# vara-ft-wat

./: Cargo.toml  LICENSE  README.md
benchmark/: Cargo.toml  build.rs
benchmark/src/: main.rs
results/: gas_growth_bridges.csv  gas_growth_wat.csv
scripts/: plot_gas_growth.py
wat/: extended_vft.wat
